@@ -1,3 +1,11 @@
+2009-07-16  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/i386.exp: Run ifunc and x86-64-ifunc.
+
+	* gas/i386/ifunc.d: New,
+	* gas/i386/ifunc.s: Likewise.
+	* gas/i386/x86-64-ifunc.d: Likewise.
+
 2009-07-16  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* gas/arm/target-reloc-1.s: New.
