@@ -1,3 +1,8 @@
+2009-07-16  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/tc-i386.c (md_assemble): Only check i.operands for AX.
+	(md_estimate_size_before_relax): Don't relax IFUNC symbols.
+
 2009-07-16  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* config/tc-arm.c (md_apply_fix <BFD_RELOC_ARM_TARGET2>): Write
